[gd_scene load_steps=15 format=3 uid="uid://w4x6di3ffmx5"]

[ext_resource type="Script" path="res://Scripts/enemy_1.gd" id="1_o6y7e"]
[ext_resource type="Texture2D" uid="uid://cyhl1k5enojim" path="res://Resources/spritesheets/bruinbear_spritesheet.png" id="2_7p0xw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7yg61"]
atlas = ExtResource("2_7p0xw")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iyfv"]
atlas = ExtResource("2_7p0xw")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkgi2"]
atlas = ExtResource("2_7p0xw")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxmqh"]
atlas = ExtResource("2_7p0xw")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fka8"]
atlas = ExtResource("2_7p0xw")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dhbw"]
atlas = ExtResource("2_7p0xw")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsidt"]
atlas = ExtResource("2_7p0xw")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_at3yu"]
atlas = ExtResource("2_7p0xw")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pfdp"]
atlas = ExtResource("2_7p0xw")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_elj30"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yg61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iyfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkgi2")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxmqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fka8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dhbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsidt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at3yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pfdp")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnuf0"]
size = Vector2(21, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hm34h"]
size = Vector2(24.2, 14.8)

[node name="Enemy1" type="CharacterBody2D"]
process_mode = 1
scale = Vector2(5, 5)
script = ExtResource("1_o6y7e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_elj30")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_mnuf0")

[node name="PlayerInteraction" type="Area2D" parent="."]
position = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteraction"]
position = Vector2(-0.199999, -0.3)
shape = SubResource("RectangleShape2D_hm34h")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerInteraction" to="." method="_on_player_interaction_body_entered"]
[connection signal="body_exited" from="PlayerInteraction" to="." method="_on_player_interaction_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
